Simplify objects creation